# Axiom-Tile-Editor

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  hi.autosave  imgui.ini
assets/autosave/: autosave.json
assets/config/: editor.json  imgui.ini
assets/maps/: map.json
cmake/: Options.cmake  Warnings.cmake
docs/: ARCHITECTURE.md  BUILDING.md  README.md  USAGE.md
scripts/: build.sh  run.sh
src/: main.cpp
src/app/: App.cpp  App.h  Config.h
src/editor/: Atlas.h  Commands.cpp  Commands.h  Selection.cpp  Selection.h  TileMap.cpp  TileMap.h  Tools.cpp  Tools.h
src/platform/: Actions.cpp  Actions.h  GlfwWindow.cpp  GlfwWindow.h  Input.cpp  Input.h
src/render/: Framebuffer.cpp  Framebuffer.h  GL.h  Mesh.cpp  Mesh.h  OrthoCamera.cpp  OrthoCamera.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  Panels.cpp  Panels.h  Theme.cpp  Theme.h
src/util/: FileIO.cpp  FileIO.h  JsonLite.h  Log.cpp  Log.h
